--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header p {
 }
 
 nav {
- background-color: #e2e2e2
+ background-color: #e2e2e2;
  padding: 1em;
 }
 
@@ -40,7 +40,17 @@ nav ul {
   padding: 0;
   display: flex;
   justify-content: space-around;
+  color: #0074d9;
 }
  nav li {
    margin: .5rem;
  }
+
+nav a {
+   color:#0074d9;
+   text-decoration: none;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
